[gd_scene load_steps=43 format=2]

[ext_resource path="res://Scripts/Game/Ryu2.gd" type="Script" id=1]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/2.png" type="Texture" id=3]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/4.png" type="Texture" id=5]
[ext_resource path="res://Assets/animacions provisionals/pegar/kamikamika/5.png" type="Texture" id=6]
[ext_resource path="res://Assets/animacions provisionals/camina/1.png" type="Texture" id=7]
[ext_resource path="res://Assets/animacions provisionals/camina/2.png" type="Texture" id=8]
[ext_resource path="res://Assets/animacions provisionals/camina/3.png" type="Texture" id=9]
[ext_resource path="res://Assets/animacions provisionals/camina/4.png" type="Texture" id=10]
[ext_resource path="res://Assets/animacions provisionals/camina/5.png" type="Texture" id=11]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/1.png" type="Texture" id=12]
[ext_resource path="res://Assets/animacions provisionals/respira/1.png" type="Texture" id=13]
[ext_resource path="res://Assets/animacions provisionals/respira/2.png" type="Texture" id=14]
[ext_resource path="res://Assets/animacions provisionals/respira/3.png" type="Texture" id=15]
[ext_resource path="res://Assets/animacions provisionals/respira/4.png" type="Texture" id=16]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/5.png" type="Texture" id=17]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/6.png" type="Texture" id=18]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/1.png" type="Texture" id=19]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_fluixa/2.png" type="Texture" id=20]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/2.png" type="Texture" id=21]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/1.png" type="Texture" id=22]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/2.png" type="Texture" id=23]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/3.png" type="Texture" id=24]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/4.png" type="Texture" id=25]
[ext_resource path="res://Assets/animacions provisionals/pegar/patada_forta/5.png" type="Texture" id=26]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/3.png" type="Texture" id=27]
[ext_resource path="res://Assets/animacions provisionals/salta/volteret/4.png" type="Texture" id=28]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/1.png" type="Texture" id=29]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/2.png" type="Texture" id=30]
[ext_resource path="res://Assets/animacions provisionals/pegar/dreta/3.png" type="Texture" id=31]
[ext_resource path="res://Assets/animacions provisionals/pegar/esquerra/2.png" type="Texture" id=32]
[ext_resource path="res://Assets/animacions provisionals/salta/normal/3.png" type="Texture" id=33]
[ext_resource path="res://Assets/animacions provisionals/salta/normal/4.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Game/Extras/Punch - Kick.tscn" type="PackedScene" id=35]
[ext_resource path="res://Scripts/Game/Punch - Kick2.gd" type="Script" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "kamikami",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "camina",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "acaba_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "voltereta_avall",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "patada",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": false,
"name": "acaba_voltereta",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "patada_forta",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "voltereta_amunt",
"speed": 10.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ) ],
"loop": false,
"name": "pega_dret",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 32 ), ExtResource( 29 ) ],
"loop": false,
"name": "pega_esq",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "puja_salt",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "baixa_salt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.8575, 99.9758 )

[sub_resource type="Animation" id=3]
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "patada" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Punch - Kick:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -9999 ), Vector2( 79.1539, -56.2437 ), Vector2( -9999, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Punch - Kick2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -80, -56.244 ) ]
}

[sub_resource type="Animation" id=4]
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "pega_esq" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Punch - Kick:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -9999 ), Vector2( 62.4748, -42.4403 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Punch - Kick2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -60, -40 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 43.8575, 99.9758 )

[sub_resource type="Animation" id=6]
length = 0.9
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "quiet" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Punch - Kick:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -9999 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 5 ), SubResource( 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Punch - Kick2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Ryu2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.287567 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "quiet"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -2.85461, 113.092 )
cast_to = Vector2( 0, 25 )

[node name="Position_dreta" type="Position2D" parent="."]
position = Vector2( 93.3567, -19.1124 )

[node name="Position_esquerra" type="Position2D" parent="."]
position = Vector2( -73.4315, -17.946 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/patada = SubResource( 3 )
anims/pega_esq = SubResource( 4 )
anims/quiet = SubResource( 6 )

[node name="Punch - Kick" parent="." instance=ExtResource( 35 )]
position = Vector2( 0, -9999 )
script = ExtResource( 36 )

[node name="Punch - Kick2" parent="." instance=ExtResource( 35 )]
script = ExtResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.7254, 13.2282 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
